# ai-models-repository

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: pr-check.yml  release.yml
model_data/: models_openrouter.json
src/: lib.rs
src/providers/: mod.rs  openrouter.rs
tests/: model_repository.rs
