[package]
name = "ai-model-catalog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
